<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_margin="8dp"
              android:layout_height="match_parent">

    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="vertical">
            <ImageView android:layout_width="80dp" android:layout_height="80dp" android:id="@+id/crime_photo" android:scaleType="centerInside" android:cropToPadding="true" android:background="@android:color/darker_gray" android:clickable="true"/>

            <ImageButton android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/crime_camera" android:src="@drawable/ic_camera"/>
        </LinearLayout>
        <LinearLayout android:layout_weight="1" android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content">
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content" style="?android:listSeparatorTextViewStyle" android:text="@string/crime_title_label"/>

            <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/crime_title" android:hint="@string/crime_title_hint"/>
        </LinearLayout>
    </LinearLayout>

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" style="?android:listSeparatorTextViewStyle" android:text="@string/crime_detail_label"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/crime_data"/>

    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/crime_time"/>

    <CheckBox android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/crime_solved" android:text="@string/crime_solved_label"/>

    <Button android:id="@+id/crime_suspect" android:text="@string/crime_suspect_text" android:layout_width="match_parent" android:layout_height="wrap_content"/>

    <Button android:id="@+id/crime_report" android:text="@string/crime_report_text" android:layout_width="match_parent" android:layout_height="wrap_content"/>

</LinearLayout>